# miu

./: .clang-format  .gitignore  README.md  Source.cpp  miu.rc  miu.sln  miu.vcxproj  resource.h
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/jp/hack/miu/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/shaders/: blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  text.frag  text.frag.spv  text.vert  text.vert.spv
Android/app/src/main/cpp/: CMakeLists.txt  main.cpp
Android/app/src/main/java/jp/hack/miu/: MainActivity.java  MainActivity.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-de/: strings.xml
Android/app/src/main/res/values-fr/: strings.xml
Android/app/src/main/res/values-hi/: strings.xml
Android/app/src/main/res/values-hy/: strings.xml
Android/app/src/main/res/values-in/: strings.xml
Android/app/src/main/res/values-it/: strings.xml
Android/app/src/main/res/values-ja/: strings.xml
Android/app/src/main/res/values-ko/: strings.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/main/res/values-pt/: strings.xml
Android/app/src/main/res/values-ru/: strings.xml
Android/app/src/main/res/values-yo/: strings.xml
Android/app/src/main/res/values-zh-rCN/: strings.xml
Android/app/src/main/res/values-zh-rTW/: strings.xml
Android/app/src/main/shaders/: text.frag  text.vert
Android/app/src/test/java/jp/hack/miu/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
installer/: miu.ism
installer/miu/Script Files/: Setup.Rul  Setup.dbg  Setup.inx  Setup.map  Setup.obs
macOS/: build.sh  miu.mm
macOS/en.lproj/: Localizable.strings
macOS/hy.lproj/: Localizable.strings
macOS/ja.lproj/: Localizable.strings
macOS/ko.lproj/: Localizable.strings
macOS/miu/: miu.mm
macOS/miu.xcodeproj/: project.pbxproj
macOS/miu.xcodeproj/project.xcworkspace/xcuserdata/kenji.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/miu.xcodeproj/xcshareddata/xcschemes/: miu.xcscheme
macOS/miu.xcodeproj/xcuserdata/kenji.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macOS/miu.xcodeproj/xcuserdata/kenji.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/miu_iOS/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
macOS/miu_iOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOS/miu_iOS/Assets.xcassets/TitleIcon.imageset/: Contents.json
macOS/miu_iOS/Base.lproj/: LaunchScreen.storyboard
macOS/miu_macOS/: EditorCore.cpp  EditorCore.h  main.mm
macOS/yo.lproj/: Localizable.strings
macOS/zh-Hans.lproj/: Localizable.strings
package/: Package.appxmanifest  package.wapproj
package/ja-JP/: Resources.resw
tests/: tests.cpp  tests.vcxproj
tests/startup_test/: startup_test.cpp  startup_test.vcxproj  startup_test.vcxproj.filters
